--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<li class="rss"><a rel="alternate" type="application/rss+xml" href="{{ site.env.URL }}/feed.xml" title="RSS Feed">RSS Feed</a></li>
 			{% endif %}
 			{% if site.env.SHOW_LINK == "1" %}
-			<li class="link"><a rel="me" href="https://gjt-blog.netlify.app/" title="今朝博客">今朝博客</a></li>
+			<li class="link"><a rel="me" href="https://gjt-blog.netlify.app/" title="博客">博客</a></li>
 			{% endif %}
 			{% if site.env.TWITTER_USERNAME != "" %}
 			<li class="twitter"><a rel="me" href="https://twitter.com/{{ site.env.TWITTER_USERNAME }}" title="@{{ site.env.TWITTER_USERNAME }} on Twitter">Twitter</a></li>
